[package]
name = "thruster"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minilp = "0.2.2"
bevy = { git = "https://github.com/bevyengine/bevy.git", version="0.4", default-features = false }
bevy_rapier2d = { version = "0.7.0", default-features = false, features=["dim2"] }
serde = "1.0.119"
