[package]
name = "thruster_example"
version = "0.1.0"
authors = []
edition = "2018"
repository = "https://github.com/alec-deason/thruster/tree/main/examples/spaceship"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git", version="0.4.0", default-features=false}
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2.git", version="0.4.0", optional=true}
bevy_rapier2d = { version = "0.7.0", default-features = false, features=["dim2"] }
winit = {version = "0.24.0"}
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon.git" }
thruster = { path = "../.." }
rand = "0.8.1"

[patch.crates-io]
bevy = {git = "https://github.com/bevyengine/bevy.git", default-features=false}

[profile.dev]
opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'
