[package]
name = "thruster_example"
version = "0.1.0"
authors = []
edition = "2018"
repository = "https://github.com/alec-deason/thruster/tree/main/examples/spaceship"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {version="0.5"}
bevy_rapier2d = { version = "0.9.0", default-features = false, features=["dim2"] }
winit = {version = "0.24.0"}
thruster = { path = "../.." }
rand = "0.8.1"
bevy_prototype_lyon = "0.3.0"
bevy_webgl2 = { version = "0.5.0", optional=true}

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 's'
